--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,12 @@ body {
 
 
 ::selection {
-  background-color: #A3EBB1;
+  background-color: #B084CC;
   color: #ffffff;
   }
 
 ::-moz-selection {
-  background-color: #A3EBB1;
+  background-color: #B084CC;
   color: #ffffff;
   }
 
